--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,7 +1,7 @@
-^project\.Rproj$
-^\.Rproj\.user$
-^project\.Rcheck$
-^project.*\.tar\.gz$
-^project.*\.tgz$
+.*\.Rproj$
+.*\.Rproj\.user$
+.*\.Rcheck$
+.*\.tar\.gz$
+.*\.tgz$
 ^LICENSE\.md$
 ^\.github$
